WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
187318
Fix some -Wdocumentation warnings in WebKit
https://bugs.webkit.org/show_bug.cgi?id=187318
Summary
Fix some -Wdocumentation warnings in WebKit
Tim Horton
Reported
2018-07-04 02:11:22 PDT
Fix some -Wdocumentation warnings in WebKit
Attachments
Patch
(4.91 KB, patch)
2018-07-04 02:11 PDT
,
Tim Horton
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Tim Horton
Comment 1
2018-07-04 02:11:36 PDT
Created
attachment 344270
[details]
Patch
Tim Horton
Comment 2
2018-07-04 02:12:51 PDT
The remaining ones are complaining about WKWebView's frequent @description @link WKWebView @/link is KVO compliant blah blah. And complains that the @description is empty.
mitz
Comment 3
2018-07-04 07:02:48 PDT
Comment on
attachment 344270
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=344270&action=review
> Source/WebKit/ChangeLog:13 > + Define U_HIDE_DEPRECATED_API. It's defined in all other WebKit projects, > + and the doc comments in the deprecated ICU API have some errors.
We should just go back to treating the ICU headers as system headers, and thus exempt from warnings.
mitz
Comment 4
2018-07-04 07:03:50 PDT
(In reply to mitz from
comment #3
)
> Comment on
attachment 344270
[details]
> Patch > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=344270&action=review
> > > Source/WebKit/ChangeLog:13 > > + Define U_HIDE_DEPRECATED_API. It's defined in all other WebKit projects, > > + and the doc comments in the deprecated ICU API have some errors. > > We should just go back to treating the ICU headers as system headers, and > thus exempt from warnings.
See
bug 183355
.
WebKit Commit Bot
Comment 5
2018-07-05 15:20:14 PDT
Comment on
attachment 344270
[details]
Patch Clearing flags on attachment: 344270 Committed
r233544
: <
https://trac.webkit.org/changeset/233544
>
WebKit Commit Bot
Comment 6
2018-07-05 15:20:16 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 7
2018-07-05 15:21:23 PDT
<
rdar://problem/41866876
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug