Source/WebKit/UIProcess/API/Cocoa/WKUIDelegate.h
@@ -102,7 +102,7 @@ NS_ASSUME_NONNULL_BEGIN
 
 /*! @abstract Displays a JavaScript text input panel.
  @param webView The web view invoking the delegate method.
- @param message The message to display.
+ @param prompt The prompt to display.
  @param defaultText The initial text to display in the text entry field.
  @param frame Information about the frame whose JavaScript initiated this call.
  @param completionHandler The completion handler to call after the text
